// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payouts :  renders a snapshot of <Payouts /> when bankDetails is false 1`] = `
Array [
  <header
    className="header"
  >
    <h2
      className="ant-typography"
      onClick={null}
      style={
        Object {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Payouts
    </h2>
    <button
      className="ant-btn ant-btn-primary ant-btn-lg"
      onClick={[Function]}
      type="button"
    >
      <span>
        Payout Setting
      </span>
    </button>
  </header>,
  <section>
    <div
      className="filterToggle"
    >
      <button
        className="ant-btn ant-btn-round"
        onClick={[Function]}
        type="button"
      >
        <span>
          Show Filters...
        </span>
      </button>
    </div>
    <div
      className="filtersContainer"
    >
      <button
        className="ant-btn ant-btn-text ant-btn-circle ant-btn-icon-only closeFilter"
        onClick={[Function]}
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
            opacity=".87"
          />
          <path
            d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
          />
        </svg>
      </button>
      <div
        className="lgMargin"
      >
        <form
          className="ant-form ant-form-horizontal ant-form-large"
          id="filter_form"
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div
            className="ant-row ant-row-space-between ant-row-bottom"
            style={
              Object {
                "marginLeft": -10,
                "marginRight": -10,
              }
            }
          >
            <div
              className="ant-col input__wrapper ant-col-xs-24 ant-col-lg-5"
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                }
              }
            >
              <div
                className="ant-row ant-form-item"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-label"
                  style={Object {}}
                >
                  <label
                    className=""
                    htmlFor="filter_form_search"
                    title="Search"
                  >
                    Search
                  </label>
                </div>
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <input
                        className="ant-input ant-input-lg"
                        id="filter_form_search"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col input__wrapper ant-col-xs-24 ant-col-lg-5"
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                }
              }
            >
              <div
                className="ant-row ant-form-item"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-label"
                  style={Object {}}
                >
                  <label
                    className=""
                    htmlFor="filter_form_currency"
                    title="Currency"
                  >
                    Currency
                  </label>
                </div>
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <div
                        className="ant-select ant-select-lg ant-select-single ant-select-show-arrow"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                      >
                        <div
                          className="ant-select-selector"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                        >
                          <span
                            className="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="filter_form_currency_list_0"
                              aria-autocomplete="list"
                              aria-controls="filter_form_currency_list"
                              aria-haspopup="listbox"
                              aria-owns="filter_form_currency_list"
                              autoComplete="off"
                              className="ant-select-selection-search-input"
                              id="filter_form_currency"
                              onChange={[Function]}
                              onCompositionEnd={[Function]}
                              onCompositionStart={[Function]}
                              onKeyDown={[Function]}
                              onMouseDown={[Function]}
                              onPaste={[Function]}
                              readOnly={true}
                              role="combobox"
                              style={
                                Object {
                                  "opacity": 0,
                                }
                              }
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            className="ant-select-selection-placeholder"
                          >
                            NGN
                          </span>
                        </div>
                        <span
                          aria-hidden={true}
                          className="ant-select-arrow"
                          onMouseDown={[Function]}
                          style={
                            Object {
                              "WebkitUserSelect": "none",
                              "userSelect": "none",
                            }
                          }
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            className="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col input__wrapper ant-col-xs-24 ant-col-lg-5"
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                }
              }
            >
              <div
                className="ant-row ant-form-item"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-label"
                  style={Object {}}
                >
                  <label
                    className=""
                    htmlFor="filter_form_from"
                    title="From"
                  >
                    From
                  </label>
                </div>
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <div
                        className="ant-picker ant-picker-large"
                        onMouseUp={[Function]}
                      >
                        <div
                          className="ant-picker-input"
                        >
                          <input
                            autoComplete="off"
                            id="filter_form_from"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            placeholder="2021-07-22"
                            readOnly={true}
                            size={12}
                            title=""
                            value=""
                          />
                          <span
                            className="ant-picker-suffix"
                          >
                            <span
                              aria-label="calendar"
                              className="anticon anticon-calendar"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="calendar"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col input__wrapper ant-col-xs-24 ant-col-lg-5"
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                }
              }
            >
              <div
                className="ant-row ant-form-item"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-label"
                  style={Object {}}
                >
                  <label
                    className=""
                    htmlFor="filter_form_to"
                    title="To"
                  >
                    To
                  </label>
                </div>
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <div
                        className="ant-picker ant-picker-large"
                        onMouseUp={[Function]}
                      >
                        <div
                          className="ant-picker-input"
                        >
                          <input
                            autoComplete="off"
                            id="filter_form_to"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            placeholder="2021-07-22"
                            readOnly={true}
                            size={12}
                            title=""
                            value=""
                          />
                          <span
                            className="ant-picker-suffix"
                          >
                            <span
                              aria-label="calendar"
                              className="anticon anticon-calendar"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="calendar"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col filter__btn ant-col-xs-24 ant-col-lg-3"
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                }
              }
            >
              <div
                className="ant-row ant-form-item"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <button
                        className="ant-btn ant-btn-primary ant-btn-lg"
                        onClick={[Function]}
                        type="submit"
                      >
                        <img
                          src="[jest.find('../utils')]"
                        />
                        <span>
                            Filter
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </section>,
  <section
    className="download"
  >
    <div
      className="csvDataDownload"
    >
      <button
        className="ant-btn ant-btn-link"
        onClick={[Function]}
        type="button"
      >
        <span>
          Export data in CSV  
        </span>
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"
          />
          <path
            d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"
          />
        </svg>
      </button>
    </div>
    <a
      download="payouts.csv"
      href="data:text/csv;charset=utf-8,﻿\\"Product\\",\\"Customer Name\\",\\"Customer Email\\",\\"Amount\\",\\"Transaction Date\\",\\"Settlement Date\\""
      onClick={[Function]}
      target="_self"
    />
  </section>,
  <section
    className="table__section"
  >
    <div
      className="ant-table-wrapper"
    >
      <div
        className="ant-spin-nested-loading"
      >
        <div
          className="ant-spin-container"
        >
          <div
            className="ant-table ant-table-empty"
          >
            <div
              className="ant-table-container"
            >
              <div
                className="ant-table-content"
                onScroll={[Function]}
                style={Object {}}
              >
                <table
                  style={
                    Object {
                      "tableLayout": "auto",
                    }
                  }
                >
                  <colgroup />
                  <thead
                    className="ant-table-thead"
                  >
                    <tr>
                      <th
                        className="ant-table-cell"
                        colSpan={null}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        Product
                      </th>
                      <th
                        className="ant-table-cell"
                        colSpan={null}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        Customer Name
                      </th>
                      <th
                        className="ant-table-cell"
                        colSpan={null}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        Customer Email
                      </th>
                      <th
                        className="ant-table-cell"
                        colSpan={null}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        Amount
                      </th>
                      <th
                        className="ant-table-cell"
                        colSpan={null}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        Transaction Date
                      </th>
                      <th
                        className="ant-table-cell"
                        colSpan={null}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        Settlement Date
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    className="ant-table-tbody"
                  >
                    <tr
                      className="ant-table-placeholder"
                      style={
                        Object {
                          "display": null,
                        }
                      }
                    >
                      <td
                        className="ant-table-cell"
                        colSpan={6}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        <div
                          className="ant-empty ant-empty-normal"
                        >
                          <div
                            className="ant-empty-image"
                          >
                            <svg
                              className="ant-empty-img-simple"
                              height="41"
                              viewBox="0 0 64 41"
                              width="64"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="none"
                                fillRule="evenodd"
                                transform="translate(0 1)"
                              >
                                <ellipse
                                  className="ant-empty-img-simple-ellipse"
                                  cx="32"
                                  cy="33"
                                  rx="32"
                                  ry="7"
                                />
                                <g
                                  className="ant-empty-img-simple-g"
                                  fillRule="nonzero"
                                >
                                  <path
                                    d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                  />
                                  <path
                                    className="ant-empty-img-simple-path"
                                    d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                  />
                                </g>
                              </g>
                            </svg>
                          </div>
                          <div
                            className="ant-empty-description"
                          >
                            No Data
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>,
  <section>
    <p>
      <span
        className="ant-typography"
        onClick={null}
        style={
          Object {
            "WebkitLineClamp": undefined,
          }
        }
      >
        To start receiving money from your sales ensure you setup your bank details
      </span>
    </p>
    <a
      href="/account/sales/payouts/set-up-bank-details"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Set Up Bank Details
    </a>
  </section>,
]
`;

exports[`Payouts :  renders a snapshot of <Payouts /> when bankDetails is true 1`] = `
Array [
  <header
    className="header"
  >
    <h2
      className="ant-typography"
      onClick={null}
      style={
        Object {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Payouts
    </h2>
    <button
      className="ant-btn ant-btn-primary ant-btn-lg"
      onClick={[Function]}
      type="button"
    >
      <span>
        Payout Setting
      </span>
    </button>
  </header>,
  <section>
    <div
      className="filterToggle"
    >
      <button
        className="ant-btn ant-btn-round"
        onClick={[Function]}
        type="button"
      >
        <span>
          Show Filters...
        </span>
      </button>
    </div>
    <div
      className="filtersContainer"
    >
      <button
        className="ant-btn ant-btn-text ant-btn-circle ant-btn-icon-only closeFilter"
        onClick={[Function]}
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
            opacity=".87"
          />
          <path
            d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
          />
        </svg>
      </button>
      <div
        className="lgMargin"
      >
        <form
          className="ant-form ant-form-horizontal ant-form-large"
          id="filter_form"
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div
            className="ant-row ant-row-space-between ant-row-bottom"
            style={
              Object {
                "marginLeft": -10,
                "marginRight": -10,
              }
            }
          >
            <div
              className="ant-col input__wrapper ant-col-xs-24 ant-col-lg-5"
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                }
              }
            >
              <div
                className="ant-row ant-form-item"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-label"
                  style={Object {}}
                >
                  <label
                    className=""
                    htmlFor="filter_form_search"
                    title="Search"
                  >
                    Search
                  </label>
                </div>
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <input
                        className="ant-input ant-input-lg"
                        id="filter_form_search"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col input__wrapper ant-col-xs-24 ant-col-lg-5"
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                }
              }
            >
              <div
                className="ant-row ant-form-item"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-label"
                  style={Object {}}
                >
                  <label
                    className=""
                    htmlFor="filter_form_currency"
                    title="Currency"
                  >
                    Currency
                  </label>
                </div>
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <div
                        className="ant-select ant-select-lg ant-select-single ant-select-show-arrow"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                      >
                        <div
                          className="ant-select-selector"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                        >
                          <span
                            className="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="filter_form_currency_list_0"
                              aria-autocomplete="list"
                              aria-controls="filter_form_currency_list"
                              aria-haspopup="listbox"
                              aria-owns="filter_form_currency_list"
                              autoComplete="off"
                              className="ant-select-selection-search-input"
                              id="filter_form_currency"
                              onChange={[Function]}
                              onCompositionEnd={[Function]}
                              onCompositionStart={[Function]}
                              onKeyDown={[Function]}
                              onMouseDown={[Function]}
                              onPaste={[Function]}
                              readOnly={true}
                              role="combobox"
                              style={
                                Object {
                                  "opacity": 0,
                                }
                              }
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            className="ant-select-selection-placeholder"
                          >
                            NGN
                          </span>
                        </div>
                        <span
                          aria-hidden={true}
                          className="ant-select-arrow"
                          onMouseDown={[Function]}
                          style={
                            Object {
                              "WebkitUserSelect": "none",
                              "userSelect": "none",
                            }
                          }
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            className="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col input__wrapper ant-col-xs-24 ant-col-lg-5"
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                }
              }
            >
              <div
                className="ant-row ant-form-item"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-label"
                  style={Object {}}
                >
                  <label
                    className=""
                    htmlFor="filter_form_from"
                    title="From"
                  >
                    From
                  </label>
                </div>
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <div
                        className="ant-picker ant-picker-large"
                        onMouseUp={[Function]}
                      >
                        <div
                          className="ant-picker-input"
                        >
                          <input
                            autoComplete="off"
                            id="filter_form_from"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            placeholder="2021-07-22"
                            readOnly={true}
                            size={12}
                            title=""
                            value=""
                          />
                          <span
                            className="ant-picker-suffix"
                          >
                            <span
                              aria-label="calendar"
                              className="anticon anticon-calendar"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="calendar"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col input__wrapper ant-col-xs-24 ant-col-lg-5"
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                }
              }
            >
              <div
                className="ant-row ant-form-item"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-label"
                  style={Object {}}
                >
                  <label
                    className=""
                    htmlFor="filter_form_to"
                    title="To"
                  >
                    To
                  </label>
                </div>
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <div
                        className="ant-picker ant-picker-large"
                        onMouseUp={[Function]}
                      >
                        <div
                          className="ant-picker-input"
                        >
                          <input
                            autoComplete="off"
                            id="filter_form_to"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            placeholder="2021-07-22"
                            readOnly={true}
                            size={12}
                            title=""
                            value=""
                          />
                          <span
                            className="ant-picker-suffix"
                          >
                            <span
                              aria-label="calendar"
                              className="anticon anticon-calendar"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="calendar"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col filter__btn ant-col-xs-24 ant-col-lg-3"
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingRight": 10,
                }
              }
            >
              <div
                className="ant-row ant-form-item"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <button
                        className="ant-btn ant-btn-primary ant-btn-lg"
                        onClick={[Function]}
                        type="submit"
                      >
                        <img
                          src="[jest.find('../utils')]"
                        />
                        <span>
                            Filter
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </section>,
  <section
    className="download"
  >
    <div
      className="csvDataDownload"
    >
      <button
        className="ant-btn ant-btn-link"
        onClick={[Function]}
        type="button"
      >
        <span>
          Export data in CSV  
        </span>
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"
          />
          <path
            d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"
          />
        </svg>
      </button>
    </div>
    <a
      download="payouts.csv"
      href="data:text/csv;charset=utf-8,﻿\\"Product\\",\\"Customer Name\\",\\"Customer Email\\",\\"Amount\\",\\"Transaction Date\\",\\"Settlement Date\\""
      onClick={[Function]}
      target="_self"
    />
  </section>,
  <section
    className="table__section"
  >
    <div
      className="ant-table-wrapper"
    >
      <div
        className="ant-spin-nested-loading"
      >
        <div>
          <div
            className="ant-spin ant-spin-spinning"
          >
            <span
              className="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
        <div
          className="ant-spin-container ant-spin-blur"
        >
          <div
            className="ant-table ant-table-empty"
          >
            <div
              className="ant-table-container"
            >
              <div
                className="ant-table-content"
                onScroll={[Function]}
                style={Object {}}
              >
                <table
                  style={
                    Object {
                      "tableLayout": "auto",
                    }
                  }
                >
                  <colgroup />
                  <thead
                    className="ant-table-thead"
                  >
                    <tr>
                      <th
                        className="ant-table-cell"
                        colSpan={null}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        Product
                      </th>
                      <th
                        className="ant-table-cell"
                        colSpan={null}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        Customer Name
                      </th>
                      <th
                        className="ant-table-cell"
                        colSpan={null}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        Customer Email
                      </th>
                      <th
                        className="ant-table-cell"
                        colSpan={null}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        Amount
                      </th>
                      <th
                        className="ant-table-cell"
                        colSpan={null}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        Transaction Date
                      </th>
                      <th
                        className="ant-table-cell"
                        colSpan={null}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        Settlement Date
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    className="ant-table-tbody"
                  >
                    <tr
                      className="ant-table-placeholder"
                      style={
                        Object {
                          "display": null,
                        }
                      }
                    >
                      <td
                        className="ant-table-cell"
                        colSpan={6}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        rowSpan={null}
                        style={Object {}}
                      >
                        <div
                          className="ant-empty ant-empty-normal"
                        >
                          <div
                            className="ant-empty-image"
                          >
                            <svg
                              className="ant-empty-img-simple"
                              height="41"
                              viewBox="0 0 64 41"
                              width="64"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="none"
                                fillRule="evenodd"
                                transform="translate(0 1)"
                              >
                                <ellipse
                                  className="ant-empty-img-simple-ellipse"
                                  cx="32"
                                  cy="33"
                                  rx="32"
                                  ry="7"
                                />
                                <g
                                  className="ant-empty-img-simple-g"
                                  fillRule="nonzero"
                                >
                                  <path
                                    d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                  />
                                  <path
                                    className="ant-empty-img-simple-path"
                                    d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                  />
                                </g>
                              </g>
                            </svg>
                          </div>
                          <div
                            className="ant-empty-description"
                          >
                            No Data
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;
